@@ -22,10 +22,8 @@ rem   JAVA_HOME       Must point at your Java Development Kit installation.
 rem                   Required to run the with the "debug" argument.
 rem ---------------------------------------------------------------------------
 
-set MYCOLLAB_PORT=8080
-set PROCESS_PORT=12345
-set STOP_KEY=mycollab
 set _RUNJAVA=java
+MYCOLLAB_OPTS=-noverify -server -Xms394m -Xmx768m -XX:NewSize=128m -XX:+DisableExplicitGC -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC
 
 rem Suppress Terminate batch job on CTRL+C
 if not ""%1"" == ""run"" goto mainEntry
@@ -61,7 +59,6 @@ rem ----- Execute The Requested Command ---------------------------------------
 echo Using MYCOLLAB_HOME:   "%MYCOLLAB_HOME%"
 
 set _EXECJAVA=%_RUNJAVA%
-set ACTION=--port %MYCOLLAB_PORT% --process-port %PROCESS_PORT% --stop-key %STOP_KEY%
 
 
 if ""%1"" == ""--start"" goto doStart
@@ -77,10 +74,10 @@ goto end
 shift
 if not "%OS%" == "Windows_NT" goto noTitle
 if "%TITLE%" == "" set TITLE=MyCollab
-set _EXECJAVA=start "%TITLE%" %_RUNJAVA%
+set _EXECJAVA=start "%TITLE%" %_RUNJAVA% %MYCOLLAB_OPTS%
 goto gotTitle
 :noTitle
-set _EXECJAVA=start %_RUNJAVA%
+set _EXECJAVA=start %_RUNJAVA% %MYCOLLAB_OPTS%
 :gotTitle
 shift
 goto execCmd
@@ -93,7 +90,7 @@ goto execCmd
 
 rem Execute Java with the applicable properties
 cd ..
-%_EXECJAVA% -jar executor.jar  %ACTION% %*
+%_EXECJAVA% -jar executor.jar %*
 goto end
 
 :end
